--- a/safinaloproeqti/saboloo.html
+++ b/safinaloproeqti/saboloo.html
@@ -1,7 +1,8 @@
 <html>
     <head>
-        <link rel="stylesheet" href="style/saboloo.css">
+        <meta charset="UTF-8">
         <meta name="viewport" content="width=devise-width, initial-scale=1.0">
+        <link rel="stylesheet" href="style/saboloo.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Sofadi+One&display=swap" rel="stylesheet">
